--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: go
 
+before_script:
+  - go get github.com/kisielk/errcheck
+  - go get github.com/golang/lint/golint
+
 script:
-  - go vet -v ./...
-  - go test -v -race ./...
-  - go build ./...
+  - go vet ./...
+  - errcheck -blank ./...
+  - golint ./...
+  - go test -race ./...
+  - go build -tags 'netgo' ./...
 
 deploy:
   - provider: codedeploy
