--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,16 @@ before_script:
   - go get github.com/golang/lint/golint
 
 script:
-  - go vet ./...
-  - errcheck -blank ./...
-  - golint ./...
-  - go test -race ./...
-  - go build -tags 'netgo' -o build/ingest ./ingest
-  - go build -tags 'netgo' -o build/brain ./brain
-  - go build -tags 'netgo' -o build/outgest ./outgest
+  - go vet ./bot/...
+  - errcheck -blank ./bot/...
+  - golint ./bot/...
+  - go test -race ./bot/...
+  - go build -tags 'netgo' -o build/bot ./bot/...
 
 before_deploy:
+  - cp appspec.yml build/appspec.yml
   - mkdir -p deploy
-  - tar -zcvf deploy/build.tgz build/
+  - tar -zcvf deploy/build_`date -u +%Y-%m-%d_%H:%M:%S`.tgz build/*
 
 deploy:
   - provider: s3
