--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: go
 
 before_script:
-  - go get github.com/kisielk/errcheck
+#  - go get github.com/kisielk/errcheck
   - go get github.com/golang/lint/golint
 
 script:
   - go vet ./bot/...
-  - errcheck -blank ./bot/...
+#  - errcheck -blank ./bot/...
   - golint ./bot/...
   - go test -race ./bot/...
   - go build -tags 'netgo' -o build/bot ./bot/...
