--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,14 @@ before_script:
   - go get github.com/golang/lint/golint
 
 script:
+  - go vet ./api/...
+#  - errcheck -blank ./api/...
+#  - golint ./api/...
+  - go test -race ./api/...
+  - go build -tags 'netgo' -o build/api ./api/...
   - go vet ./bot/...
 #  - errcheck -blank ./bot/...
-  - golint ./bot/...
+#  - golint ./bot/...
   - go test -race ./bot/...
   - go build -tags 'netgo' -o build/bot ./bot/...
 
